--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,7 @@ services:
       - POSTGRES_DB=postgres
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=postgres
+      - TZ=America/Costa_Rica
   web:
     build: .
     command: python manage.py runserver 0.0.0.0:8000
@@ -19,12 +20,14 @@ services:
       - "8000:8000"
     depends_on:
       - db
-    
+    environment:
+      - TZ=America/Costa_Rica
   pgadmin:
     image: dpage/pgadmin4
     environment:
       PGADMIN_DEFAULT_EMAIL: "admin@uia.ac.cr"
       PGADMIN_DEFAULT_PASSWORD: "admin"
+      TZ: "America/Costa_Rica"
     ports:
       - "80:80"
     depends_on:
